# hw3

./: Makefile  README.md  hw3.cabal  stack.yaml
src/: Hw3.hs  NewState.hs  StateMono.hs
